<resources>
    <string name="app_name">Permissions Android Studio</string>
    <string name="tvCamera">Status Permission Camera</string>
    <string name="tvBt">Status Permission Bt</string>
    <string name="tvStorage">Status Permission Storage</string>
    <string name="tvMicrophone">Status Permission Microphone</string>
    <string name="tvInternet">Status Permission Internet</string>
    <string name="tvDactilar">Status Permission Dactilar</string>
    <string name="tvContacts">Status Permission Contacts</string>
    <string name="btnRequestPermission">Request Permission</string>
    <string name="btnCheckPermission">Check Permission</string>
</resources>